# Electra

./: .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  ARCHITECTURE.md  AUDIT.md  Dockerfile  PROBLEM_STATEMENT.md  README.md  firebase.json  firestore.rules  package-lock.json  package.json  pytest.ini
.github/workflows/: ci.yml  test.yml
backend/: .coverage  .env.example  __init__.py  dependencies.py  locustfile.py  main.py  mypy-output.txt  mypy.ini  pyproject.toml  requirements.txt  test-output.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/models/: __init__.py  civic.py  oracle.py
backend/app/routers/: __init__.py  health.py  oracle.py
backend/app/services/: __init__.py  cache_service.py  oracle_service.py  rate_limiter.py
backend/app/utils/: logger.py
backend/core/: redis.py
backend/middleware/: rate_limit.py
backend/routes/: civic_score.py  oracle.py  simulations.py  simulator.py
backend/services/: claude_service.py  firebase_admin.py  gemini_service.py  rate_limit.py  sanitizer.py
backend/tests/: conftest.py  test_app_services.py  test_auth.py  test_civic_score.py  test_health.py  test_oracle.py  test_oracle_router.py  test_services.py  test_simulations.py
docs/: implementation-report.md
frontend/: .depcheckrc  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.json  .unimportedrc.json  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: index.ts
frontend/src/design/: tokens.css  typography.css
frontend/src/engines/: confusionTracker.ts  oracleClient.ts  predictionEngine.ts  simulationEngine.ts  stateEngine.ts
frontend/src/events/: civicEventBus.ts
frontend/src/firebase/: analytics.ts  appCheck.ts  auth.ts  config.ts  firestore.ts  performance.ts  remoteConfig.ts
frontend/src/hooks/: index.ts  useConfusionDetector.ts  useFeatureFlag.ts  useOracle.ts  useSessionSync.ts  useTemporalRewind.ts
frontend/src/i18n/: en-simple.json  en.json  es.json  fr.json  index.ts
frontend/src/lib/: firebase.ts  logger.ts  zodSchemas.ts
frontend/src/services/: analytics.service.ts  index.ts  oracle.service.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: a11y.ts  accessibilityHelpers.ts  motion.ts  oracleParser.ts  oracleTransport.ts  sanitize.ts  validators.ts
frontend/tests/: setup.ts
frontend/tests/e2e/: journey1-first-voter.spec.ts  journey2-registration-issue.spec.ts  journey3-id-problem.spec.ts  journey4-vote-counting.spec.ts  journey5-accessibility.spec.ts  keyboard-navigation.spec.ts  mobile-viewport.spec.ts  smoke.spec.ts
frontend/tests/integration/: AdaptiveCopilot.test.tsx  CivicScore.test.tsx  CognitiveLevelSwitch.test.tsx  ElectionSimulator.test.tsx  FirebaseSync.test.tsx  JourneyFlow.test.tsx  JourneyVisualizer.test.tsx  OnboardingEngine.test.tsx  OracleRendering.test.tsx  StreamingOracle.test.tsx  TemporalRewind.test.tsx  TrustPanel.test.tsx
frontend/tests/unit/: accessibility.test.tsx  accessibilityHelpers.test.ts  confusionTracker.test.ts  firebaseServices.test.ts  firestore.test.ts  i18n.test.ts  motion.test.ts  (+10 more)
(+76 files in other folders)
