[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "electra-backend"
version = "2.0.0"
description = "Electra Civic Intelligence OS Backend"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "firebase-admin>=6.5.0",
    "google-cloud-secret-manager>=2.19.0",
    "google-cloud-logging>=3.9.0",
    "google-cloud-error-reporting>=1.11.0",
    "redis>=5.0.3",
    "google-generativeai>=0.4.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "starlette>=0.36.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "locust>=2.24.1",
    "mypy>=1.9.0",
    "ruff>=0.3.4"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Type google\\._upb\\._message\\..*:DeprecationWarning"
]

[tool.coverage.run]
omit = [
    "app/dependencies.py",
    "app/main.py",
    "app/routers/health.py"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "core",
    "dependencies.py",
    "locustfile.py",
    "main.py",
    "middleware",
    "routes",
    "services",
    "tests"
]

[tool.ruff.lint]
select = ["E","F","I","N","W","UP","ANN","B","C4","SIM","TCH","D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_explicit = true
disallow_any_generics = true

[tool.deptry]
known_first_party = ["backend"]
per_rule_ignores = { DEP002 = ["uvicorn", "google-cloud-secret-manager", "google-cloud-logging", "google-cloud-error-reporting", "python-multipart", "httpx", "pytest", "pytest-asyncio", "pytest-mock", "locust", "mypy", "ruff"] }
package_module_name_map = { "google-cloud-secret-manager" = "google.cloud.secretmanager", "google-cloud-logging" = "google.cloud.logging", "google-cloud-error-reporting" = "google.cloud.error_reporting", "python-multipart" = "multipart", "pytest-mock" = "pytest_mock", "locust" = "locust" }
